refactor: prefer Path.of() instead of Paths.get() (#2055)
openrewrite: https://docs.openrewrite.org/recipes/java/migrate/nio/file/pathsgettopathof